# URL_Shortener

./: .env_example  .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
config/: settings.py  urls.py
core/: settings.py  urls.py
shortener/: admin.py  decorators.py  exceptions.py  forms.py  models.py  serializers.py  services.py  urls.py  utils.py  validators.py  views.py
shortener/migrations/: 0001_initial.py  0002_alter_shorturl_code.py  0003_alter_shorturl_url.py  0004_shorturl_title.py  0005_alter_shorturl_options_shorturl_created_at.py
shortener/static/shortener/css/: style.css
shortener/static/shortener/js/: auto_field_filling.js
shortener/templates/shortener/: change_short_url.html  create_short_url.html  create_short_url_done.html  delete_short_url.html  detail_short_url.html  home.html  list_short_url.html
static/css/: style.css
templates/: base.html
users/: urls.py  views.py
users/static/users/css/: style.css
users/templates/users/: login.html  register.html
