[project]
name = "url-shortener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "django>=6.0.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
    "django-extensions>=4.1",
    "ipython>=9.9.0",
    "pre-commit>=4.5.1",
    "python-dotenv>=1.2.1",
]

[tool.ruff]
exclude = [
    'migrations'
]

[tool.ruff.lint]
select = [
    "ANN", "FAST", "ASYNC", "B",
    "A", "EXE", "ISC", "T20",
    "Q", "RET", "SIM", "TID",
    "ARG", "C90", "N", "E",
    "W", "F", "S", "I"
]

[tool.ruff.lint.isort.sections]
"django" = ["django"]

[tool.ruff.lint.isort]
section-order = ["future", "standard-library", "third-party", "django", "first-party", "local-folder"]